Time: 1 ms (99.89%), Space: 44.5 MB (53.39%) - LeetHub